Sprint 15 - v1.2 -after 1st review